# DevHelper

./: CMakeLists.txt
.github/workflows/: main.yml.disabled
include/: Files.hpp  Ovls.hpp  cia.hpp  download.hpp  nightlyreader.hpp  scenes.hpp  stringextra.hpp
source/: Files.cpp  Ovls.cpp  cia.cpp  download.cpp  main.cpp  nightlyreader.cpp  scenes.cpp
